--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+node_modules
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -52,3 +55,4 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
+logs/
