--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "url": "git://github.com/ContinuumBridge/client.git"
   },
   "dependencies": {
-    "baconjs": "~0.6.21",
+    "backoff": "^2.4.0",
     "cookie": "^0.1.2",
     "getenv": "~0.3.0",
     "q": "~0.9.7",
     "restler": "~2.0.1",
-    "socket.io": "~0.9.15",
-    "socket.io-client": "~0.9.16",
+    "socket.io-client": "~1.0.6",
     "underscore": "^1.6.0",
     "winston": "^0.7.3"
   },
