--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "",
-  "name": "client",
+  "name": "continuumbridge",
   "description": "Continuum Bridge Raspberry Pi development package",
   "version": "0.0.0",
   "homepage": "http://www.continuumbridge.com/",
