--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie": "^0.1.2",
     "q": "~0.9.7",
     "restler": "~2.0.1",
+    "retry": "^0.6.1",
     "socket.io-client": "~1.0.6",
     "underscore": "^1.6.0",
     "winston": "^0.7.3"
