--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "",
+  "author": "Mark Claydon",
   "name": "continuumbridge",
   "description": "Continuum Bridge Raspberry Pi development package",
   "version": "0.0.0",
