--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "author": "Mark Claydon",
   "name": "continuumbridge",
   "description": "Continuum Bridge Raspberry Pi development package",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "homepage": "http://www.continuumbridge.com/",
   "repository": {
     "type": "git",
     "url": "git://github.com/ContinuumBridge/client.git"
   },
   "dependencies": {
-    "backoff": "^2.4.0",
-    "cookie": "^0.1.2",
+    "backoff": "~2.4.0",
+    "cookie": "~0.1.2",
     "q": "~0.9.7",
     "restler": "~2.0.1",
-    "retry": "^0.6.1",
+    "retry": "~0.6.1",
     "socket.io-client": "~1.0.6",
-    "underscore": "^1.6.0",
-    "winston": "^0.7.3"
+    "underscore": "~1.6.0",
+    "winston": "~0.7.3"
   },
   "devDependencies": {},
   "optionalDependencies": {},
